--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "rollup -c -w --host",
     "start": "sirv public"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "@rollup/plugin-replace": "^2.3.4",
     "axios": "^0.21.0",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "ws": "^7.4.0"
   }
 }
