--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "sirv-cli": "^1.0.0",
-    "ws": "^7.4.0"
+    "sirv-cli": "^1.0.0"
   }
 }
